# my-modern-cpp-template

./: .clang-format  .clang-tidy  .gitignore  Blah.h  CMakeLists.txt  Makefile  README.md  compile_commands.json  setup.sh
.github/workflows/: ci.yml
src/: Blah.cpp  Blah.h  CMakeLists.txt  main.cpp
test/: CMakeLists.txt  sample_test.cpp
test/sample/: sample_test1.cpp  sample_test2.cpp
